# cthulhu

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  README.md  STYLE_GUIDE.md  TODO.md  a.ct  ast.c  ast.h  b.ct  c.ct  cthulhu.g4  ctu.g4  grammar.md  imgui.ini  main.c  main.cpp  meson.build  meson_options.txt  notes.md  out.c  out.h  simple.c  sizeof.ct  stivale2.ct  temp.ast  temp.c  temp.cpp  test.c  test.ct  test.fs  tests.py  tmp.c
common/: README.md  common.dox  common.h  lexer.c  meson.build  parser.c
common/argparse/: meson.build
common/base/: meson.build
common/core/: core.dox  meson.build
common/fs/: meson.build
common/interop/: meson.build
common/io/: meson.build
common/location/: meson.build
common/notify/: meson.build
common/os/: meson.build
common/scan/: meson.build
common/stacktrace/: meson.build
common/std/: meson.build  std.dox
cthulhu/: ast.cpp  ast.hpp  cthulhu.c  cthulhu.cpp  cthulhu.h  cthulhu.hpp  debug.h  debug.hpp  emit.cpp  error.cpp  error.hpp  fwd.hpp  ir.cpp  ir.hpp  keys.inc  lexer.cpp  lexer.hpp  main.c  meson.build  parse.cpp  parser.cpp  parser.hpp  pool.cpp  pool.hpp  runtime.dox  sema.cpp  sema.h  stream.cpp  stream.hpp  tac.cpp  tac.h  token.cpp  token.hpp  util.h  visit.cpp  x86.cpp
cthulhu/ast/: ast.h  compile.c  compile.h  cthulhu.l  cthulhu.y  scan.h  scanner.c  scanner.h
cthulhu/back/: meson.build
cthulhu/driver/: cmd.c  driver.c  driver.h
cthulhu/front/: ast.c  ast.h  compile.c  compile.h  cthulhu.l  cthulhu.y  front.c  front.h  message.c  scanner.h
cthulhu/lir/: abi.h  lir.h  sema.c
cthulhu/middle/: ir.c  ir.h  middle.h
cthulhu/perf/: perf.h
cthulhu/report/: report.c  report.h
cthulhu/sema/: sema.c  sema.h
cthulhu/type/: format.c  query.c
cthulhu/util/: compat-windows.c  compat.h  debug.h  report.c  report.h  util.c  util.h
driver/cc/: cc.l  cc.y  main.c  meson.build  scan.c  scan.h  sema.h
driver/ctu/: README.md  ast.c  ast.h  ctu.l  ctu.y  main.c  meson.build  scan.c  scan.h  sema.c  sema.h
driver/jvm/: main.c  meson.build
driver/oberon/: meson.build
driver/pl0/: ast.c  ast.h  main.c  meson.build  pl0.l  pl0.y  scan.c  scan.h  sema.c  sema.h
interface/: meson.build
interface/browser/: meson.build
interface/cli/: main.c  meson.build
interface/cmd/: meson.build
interface/example/: main.c  meson.build
interface/gui/: main.cpp  meson.build
interface/harness/: main.c  meson.build
interface/support/: meson.build
old/: README.md  ctu.h  main.c  meson.build  meson_options.txt
old/asm/: README.md  aarch64.c  regalloc.h  x64.c  x86-emit.c  x86-emit.h
old/back/: README.md  meson.build
old/cthulhu/: cthulhu.cpp  cthulhu.h
old/cthulhu-old/: cthulhu.h
old/cthulhu-old3/: cthulhu.cpp  cthulhu.h  keys.inc
old/front/: ast.c  ast.h  compile.c  cthulhu.l  cthulhu.y  front.h  message.c
old/lang/: cthulhu-old.g4  cthulhu.ebnf  grm.g4
old/mid2/: ir.c  ir.h
old/middle/: ir.c  ir.h
old/scripts/: README.md  test-cc.py
old/sema/: sema.c
old/util/: report.c  report.h  util.c
src/: Main.c  Main.java  Main.kt  args.h  ast.c  ast.h  crc32.h  cthulhu.h  cthulhu.l  cthulhu.y  emit.c  emit.h  err.h  gen.cpp  hash.h  ir.c  ir.h  keywords.c  keywords.h  keywords.inc  lex.h  lexer.c  lexer.cpp  lexer.h  main.c  main.cpp  main.py  meson.build  parse.h  parser.cpp  parser.h  scanner.h  sema.c  sema.h  stream.c  stream.cpp  stream.h  token.c  token.h  utils.c  (+3 more)
src/AST/: Types.h
src/asm/: aarch64.c  aarch64.h  regalloc.c  regalloc.h  x64.c  x64.h  x86-emit.c  x86-emit.h  x86.c  x86.h
src/ast/: ast.c  compile.c  interop.c  node.h  ops.c  scan.c
src/common/: common.dox  meson.build
src/compiler/: lexer.h  stream.h
src/cthulhu/: meson.build  runtime.dox
src/data/: type.c  value.c
src/debug/: hlir.c
src/driver/: README.md  cmd.c  cmd.h  cmd.l  cmd.y  cthulhu.c  driver.c  flags.inc  meson.build  plugins.c  plugins.h  switch.c  switch.h
src/emit/: c89-old.c  c89.c  emit-ssa.c  emit.c  json.c  tree.c  wasm.c
src/extra/: meson.build
src/hlir/: attribs.c  common.c  common.h  debug.c  decl.c  hlir.c  ops.c  query.c  sema.c  type.c  validate.c
src/interface/: cthulhu.c  meson.build  runtime.c
src/language/: README.md  meson.build
src/lib/: ast.h  keys.inc  lex.h  parse.h
src/libctu/: ast.py  lex.py  parse.py
src/loader/: common.c  common.h  hlir.c  load.c  meson.build  save.c
src/loader-new/: hlir.c  loader.h
src/loader-old/: common.c  common.h  load.c  save.c
src/parse/: data.h  expr.h  exprs.h  fwd.h  types.h
src/platform/: linux.c  platform.h  windows.c
src/plugins/: README.md  meson.build
src/report/: report-ext.c  report.c
src/ssa/: debug.c  print.c  ssa.c  value.c
src/support/: meson.build  support.dox
src/tests/: sstream.cpp
src/tools/: meson.build
src/util/: compat-linux.c  compat-windows.c  compat.h  defs.c  file.c  library.c  map.c  optimal.c  report-ext.c  report.c  set.c  str.c  stream.c  util.c  vec.c  vector.c
src/utils/: stream.h
test/: example.cpp  meson.build  order.ct  test.hpp  tlexer.hpp  tparse.hpp  tstream.hpp
test/data/: rstring1.txt  rstring3.txt
test/lex/: diagnostic1.cpp  diagnostic2.cpp  end.cpp  ident.cpp  int.cpp  intern.cpp  key.cpp  rstring1.cpp  rstring2.cpp  rstring3.cpp  string.cpp  string1.cpp  symbol.cpp  symbols.cpp
test/parse/: full.cpp  type.cpp  unit.cpp
test/util/: pool.cpp  sstream.cpp
tests/: Main.ct  a.ct  asm.ctu  attribute.ctu  b.ct  c.ct  expr.ctu  hello.ct  import.ct  include.ct  include.ctu  lexer.ct  main.ct  meson.build  names.ct  rewrite.ctu  scopes.ctu  test.ctu  types.c!  types.ct  types.ctu  types.fs  types.h  types1.ctu  types2.ctu  types3.ctu  types4.ctu  types5.ctu  types6.ctu  ui.ctu
tests/aws/: meson.build  runtime.c
tests/c/: meson.build
tests/codegen/: global-calc.pl0
tests/cpp/: error-str.c
tests/crashes/: fuzz-10.ct  (+6 more)
tools/: ast.c  ast.cpp  create-lambda.c  ctc.c  ctc.cpp  ctc2.cpp  cti.c  lambda.c  load-hlir.c  meson.build  temp.cpp  test.c  tokenize-gui.cpp  tokenize.cpp  tokens-gui.cpp  tools.h  tree-gui.cpp  tune-map.c  tune.c
(+3380 files in other folders)
