option('languages', type : 'array',
    description : 'select which languages to compile',
    choices : [ 'ctu', 'pl0', 'oberon', 'jvm', 'example' ],
    value : [ 'ctu', 'pl0', 'oberon', 'example' ]
)

# TODO: move away from languages to options per language
option('lang_cc', type : 'feature',
    description : 'build the c compiler frontend',
    value : 'auto'
)

option('interfaces', type : 'array',
    description : 'select which compiler frontends to enable',
    choices : [ 'cli', 'example' ],
    value : [ 'cli', 'example' ]
)

# gui interface

option('frontend_gui', type : 'feature',
    description : 'build gui frontend (requires c++ compiler)',
    value : 'auto'
)

# trace options

option('trace_memory', type : 'feature',
    description : 'enable memory allocation tracing',
    value : 'auto'
)

option('assert', type : 'feature',
    description : 'enable basic assertions, disabled in release by default',
    value : 'auto'
)

# testing options

option('unit_tests', type : 'feature',
    description : 'enable unit tests',
    value : 'auto'
)

option('driver_tests', type : 'feature',
    description : 'enable end-to-end driver tests',
    value : 'auto'
)

# doxygen options

option('doxygen', type : 'feature',
    description : 'build doxygen docs',
    value : 'auto'
)

# build options

option('analyze', type : 'feature',
    description : 'enable static code analysis',
    value : 'disabled'
)

# tools

option('tool_notify', type : 'feature',
    description : 'build notify test tool',
    value : 'auto'
)

option('tool_diagnostic', type : 'feature',
    description : 'build diagnostic search tool',
    value : 'auto'
)

option('tool_display', type : 'feature',
    description : 'build format testing tool',
    value : 'auto'
)

option('tool_error', type : 'feature',
    description : 'build backtrace exception testing tool',
    value : 'auto'
)
